# meld

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  release-please-config.json
benches/: node_lookup.rs
config/: config.toml.example
crates/meld-events/: Cargo.toml
crates/meld-events/src/: error.rs  lib.rs
crates/meld-events/src/events/: compat.rs  store.rs  subscription.rs
crates/meld-events/tests/: event_store_contracts.rs
crates/meld-execution/: Cargo.toml
crates/meld-execution/src/: capability.rs  error.rs  execution.rs  generation.rs  lib.rs  publish.rs  task.rs  traversal.rs  workflow.rs
crates/meld-execution/src/capability/: catalog.rs  invocation.rs  runtime.rs
crates/meld-execution/src/execution/: contracts.rs  ports.rs
crates/meld-execution/src/task/: compiler.rs  events.rs  executor.rs  expansion.rs  invocation.rs  package.rs  readiness.rs  runtime.rs  templates.rs
crates/meld-execution/src/task/expansion/: contracts.rs  registry.rs  runtime.rs
crates/meld-execution/src/task/package/: contracts.rs  lower.rs  output.rs  prepare.rs  region.rs  registry.rs
crates/meld-execution/src/workflow/: events.rs  executor.rs  gates.rs  normalization.rs  profile.rs  progress.rs  record_contracts.rs  registry.rs  resolver.rs  state_store.rs
crates/meld-execution/src/workflow/executor/: attempt.rs  direct.rs  emission.rs  errors.rs  lifecycle.rs
crates/meld-execution/src/workflow/record_contracts/: id_validation.rs  prompt_link_record.rs  schema_version.rs  thread_turn_gate_record.rs
crates/meld-execution/tests/: execution_ports.rs
crates/meld-world-model/: Cargo.toml  README.md
crates/meld-world-model/src/: lib.rs
crates/meld-world-model/src/world_state/: graph.rs  legacy_claims.rs  reducer.rs
crates/meld-world-model/src/world_state/graph/: reducer.rs  runtime.rs  source_intent.rs
crates/meld-world-model/tests/: world_model_queries.rs
design/: PLAN.md  htn_goap_research.md  htn_turing.md
governance/: assessment_by_domain_policy.md  cli_targeting_policy.md  commenting_policy.md  commit_policy.md  (+6 more)
(+778 files in other folders)
