[package]
name = "meld-events"
version = "2.5.0"
edition = "2021"
authors = ["Meld Contributors"]
description = "Canonical event ledger contracts and runtime for Meld"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jerkytreats/meld"

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.8"
