[package]
name = "meld-execution"
version = "2.4.0"
edition = "2021"
authors = ["Meld Contributors"]
description = "Execution authority contracts and runtime ports for Meld"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jerkytreats/meld"

[dependencies]
async-trait = "0.1"
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
