[package]
name = "meld-world-model"
version = "2.4.0"
edition = "2021"
authors = ["Meld Contributors"]
description = "World model materialization and query contracts for Meld"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jerkytreats/meld"

[dependencies]
meld-events = { path = "../meld-events", version = "2.4.0" }
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"

[dev-dependencies]
tempfile = "3.8"
